看起来像样子了 仿4.0 spinner

--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -7,9 +7,9 @@
  	android:orientation="vertical" >
 	<com.example.myspinner.MySpinner
 		android:id="@+id/spinner_btn"
-		android:layout_width="150dp"
+		android:layout_width="100dp"
 		android:layout_height="wrap_content"
-		android:background="@drawable/spinner"
+		android:background="@drawable/spinner_ab_default_holo_light"
 		android:text="选择分类"
 		android:textSize="16sp"
 		android:paddingLeft="10dp"
