--- a/res/layout/vp_layout.xml
+++ b/res/layout/vp_layout.xml
@@ -33,14 +33,13 @@
            android:text="TAB_THREE"
            />
    </LinearLayout>
-   
-   <ImageView 
+
+   <ImageView
        android:id="@+id/image_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
-       android:src="@drawable/search_btn_normal"
-       />
+       android:src="@drawable/search_btn_normal" />
    
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
