--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -22,5 +22,16 @@
     <item name="android:background">@drawable/spinner_selector</item>
     <item name="android:paddingLeft">5dip</item>
     </style>
+    
+    <style name="SlidTitleTextStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">0.25</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:textColor">@color/tab_title_color</item>
+        <item name="android:textSize">14dp</item>
+    </style>
 
 </resources>
