--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="tab_top_text_size">14px</dimen>
+    
 </resources>
