--- a/res/layout/re_layout.xml
+++ b/res/layout/re_layout.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/springlistviewbackground"
     android:orientation="vertical"
     >
     
@@ -13,16 +14,18 @@
         <TextView 
             android:id="@+id/text"
             android:layout_width="match_parent"
-            android:layout_height="300dip"
+            android:layout_height="wrap_content"
             android:textSize="17sp"
+            android:layout_marginLeft="12dip"
+            android:layout_marginRight="12dip"
             android:text="top text"
-            android:background="@drawable/actionbar_tab_bg"
+            android:background="@drawable/label_top_bg"
             />
         <ImageView 
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/slide_title_view_bg"
+            android:src="@drawable/ic_launcher"
             />
     </RelativeLayout>
 
