--- a/res/drawable/wifianim.xml
+++ b/res/drawable/wifianim.xml
@@ -6,7 +6,7 @@
  -->  
 <animation-list  
   xmlns:android="http://schemas.android.com/apk/res/android"  
-  android:oneshot="false"  
+  android:oneshot="true"  
   >  
     <item android:drawable="@drawable/wifi1" android:duration="500"></item>  
     <item android:drawable="@drawable/wifi2" android:duration="500"></item>  
