--- a/res/layout/an_test_layout.xml
+++ b/res/layout/an_test_layout.xml
@@ -10,11 +10,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
-    
-    <ImageView 
+    <RelativeLayout 
+        android:id="@+id/an_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+        >
+       <ImageView 
         android:id="@+id/an_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+       
+       <ImageView 
+           android:id="@+id/dot"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignTop="@id/an_image"
+           android:layout_marginTop="10dip"
+           android:layout_marginLeft="25dip"
+           android:src="@drawable/dot"
+           android:visibility="gone"
+           />
+        
+    </RelativeLayout>
+    
+ 
 
 </LinearLayout>
