简单的gallery 重点是一次滑动只移动一个图片

--- a/res/layout/gallery_layout.xml
+++ b/res/layout/gallery_layout.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     >
     
-    <com.example.trlab.gallery.GalleryLayout 
-        android:id="@+id/gallery"
+    <com.example.trlab.gallery.SeriaGallery 
+        android:id="@+id/sgallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        />
+        android:spacing="30dip"
+        android:gravity="left"
+        />   
  
 
 </LinearLayout>
