修复了一些小问题 但是进度条却还没有显示出来

--- a/res/layout/slide_view_layout.xml
+++ b/res/layout/slide_view_layout.xml
@@ -5,7 +5,7 @@
     
 	<com.example.trlab.slideview.ScrollImageView
 	    android:id="@+id/wallpaper_image_view"
-	    android:layout_width="fill_parent"
+	    android:layout_width="match_parent"
 	    android:layout_height="match_parent" />
 	
 	<ImageView
