--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,22 +16,23 @@
         style="@style/spinner_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"
-        android:visibility="gone"
+        android:spinnerMode="dialog"
         />
     <!-- style="@style/spinner_style" -->
     <!-- android:background="@null" -->
-    
+    <!--  -->
     <ListView 
         android:id="@+id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         />
     <Button 
         android:id="@+id/btn1"
         android:layout_width="60dip"
         android:layout_height="60dip"
         android:text="one"
+        android:visibility="gone"
         />
     
     <Button 
@@ -39,6 +40,7 @@
         android:layout_width="60dip"
         android:layout_height="60dip"
         android:text="Two"
+        android:visibility="gone"
         />
 
 </LinearLayout>
