--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -7,7 +7,7 @@
  	android:orientation="vertical" >
 	<com.example.myspinner.MySpinner
 		android:id="@+id/spinner_btn"
-		android:layout_width="100dp"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:background="@drawable/spinner_ab_default_holo_light"
 		android:text="选择分类"
