--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -33,5 +33,15 @@
         <item name="android:textColor">@color/tab_title_color</item>
         <item name="android:textSize">14dp</item>
     </style>
+    
+    <style name="base_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
 </resources>
