--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -13,4 +13,18 @@
         <item>persion</item>
     </string-array>
     
+   <!-- Set of tip percentages -->
+    <integer-array name="tip_percentages">
+        <item>0</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>18</item>
+        <item>20</item>
+        <item>25</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+    </integer-array>
+    
 </resources>
