--- a/res/layout/pre_layout_test.xml
+++ b/res/layout/pre_layout_test.xml
@@ -9,6 +9,7 @@
       android:id="@+id/pregaller"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:scrollbars="none"
       >
       
   </com.example.trlab.selfgallery.PreGallery>
