--- a/res/layout/pre_layout_test.xml
+++ b/res/layout/pre_layout_test.xml
@@ -5,13 +5,13 @@
     android:layout_margin="10dp"
     android:layout_height="wrap_content" >
 
-  <com.example.trlab.selfgallery.PreGallery 
+  <com.example.trlab.selfgallery.PreviewGallery 
       android:id="@+id/pregaller"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:scrollbars="none"
       >
       
-  </com.example.trlab.selfgallery.PreGallery>
+  </com.example.trlab.selfgallery.PreviewGallery>
 
 </RelativeLayout>
