--- a/res/layout/view_pager_multi_fragment_demo.xml
+++ b/res/layout/view_pager_multi_fragment_demo.xml
@@ -6,19 +6,18 @@
     <RelativeLayout
         android:id="@+id/pager_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/trinea_info_layout"
+        android:layout_height="392dp"
         android:clipChildren="false"
         android:layerType="software" >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
-            android:layout_width="150dip"
-            android:layout_height="300dip"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_above="@+id/view_pager_index"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="@dimen/pager_margin"
+            android:layout_marginRight="@dimen/pager_margin"
             android:clipChildren="false" />
 
         <TextView
@@ -29,12 +28,6 @@
             android:layout_centerHorizontal="true"
             android:textSize="14sp" />
     </RelativeLayout>
-<!--  
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        layout="@layout/trinea_info" />
-        -->
+
 
 </RelativeLayout>
