--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="tab_top_text_size">14px</dimen>
-    
+    <dimen name="pager_margin">80dp</dimen>
+    <dimen name="page_margin">10dp</dimen>
 </resources>
