横向滑动的listview ok

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -12,4 +12,11 @@
         <attr name="android:galleryItemBackground"/>  
     </declare-styleable>  
     
+    <declare-styleable name="HorizontalListView">
+        <attr name="dividerWidth" format="dimension" />
+        <attr name="android:divider" />
+        <attr name="android:requiresFadingEdge" />
+        <attr name="android:fadingEdgeLength" />
+    </declare-styleable>
+    
 </resources>
