--- a/res/layout/pre_gallery_layout_item.xml
+++ b/res/layout/pre_gallery_layout_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     
      >
     
     <ImageView
         android:id="@+id/pregallery_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="223dp"
+        android:layout_height="392dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:src="@drawable/ic_launcher" />
