--- a/res/layout/hlv_test_layout.xml
+++ b/res/layout/hlv_test_layout.xml
@@ -4,25 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <com.example.trlab.os.HOverScrollView
+    <com.example.trlab.selfgallery.HOverScrollList
+        android:id="@+id/hoscroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent" 
          >
-        <LinearLayout 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" 
-            >
-            
-            <com.example.trlab.hlv.HorizontalListView
-            android:id="@+id/hlvCustomListWithDividerAndFadingEdge"
-            android:layout_width="match_parent"
-            android:layout_height="392dp"
-            android:visibility="visible"
-            />
-        </LinearLayout>
-    </com.example.trlab.os.HOverScrollView>
+    </com.example.trlab.selfgallery.HOverScrollList>
     
     
 
