horizontialscrollview has its scroll processing other view use scroller to implement scroll

--- a/res/layout/hlv_test_layout.xml
+++ b/res/layout/hlv_test_layout.xml
@@ -4,13 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <com.example.trlab.selfgallery.HOverScrollList
+    <com.example.trlab.hlv.HorizontalListView
         android:id="@+id/hoscroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent" 
          >
-    </com.example.trlab.selfgallery.HOverScrollList>
+    </com.example.trlab.hlv.HorizontalListView>
     
     
 
