--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -19,4 +19,38 @@
         <attr name="android:fadingEdgeLength" />
     </declare-styleable>
     
+    <attr name="oppoSwitchStyle" format="reference" />
+    <attr name="oppoSwitchPreferenceStyle" format="reference" />
+    
+    <declare-styleable name="Switch">
+
+        <!-- Drawable to use as the "thumb" that switches back and forth. -->
+        <attr name="thumb" format="reference" />
+        <!-- Drawable to use as the "track" that the switch thumb slides within. -->
+        <attr name="track" format="reference" />
+        <!-- Text to use when the switch is in the checked/"on" state. -->
+        <attr name="textOn" format="string" />
+        <!-- Text to use when the switch is in the unchecked/"off" state. -->
+        <attr name="textOff" format="string" />
+        <!-- Amount of padding on either side of text within the switch thumb. -->
+        <attr name="thumbTextPadding" format="dimension" />
+        <!-- TextAppearance style for text displayed on the switch thumb. -->
+        <attr name="switchTextAppearance" format="reference" />
+        <!-- Minimum width for the switch component -->
+        <attr name="switchMinWidth" format="dimension" />
+        <!-- Minimum space between the switch and caption text -->
+        <attr name="switchPadding" format="dimension" />
+    </declare-styleable>
+    <declare-styleable name="OppoSwitch">
+        <attr name="thumbOuter" format="dimension" />
+        <attr name="thumbInner" format="dimension" />
+        <attr name="thumbCross" format="dimension" />
+        <attr name="thumbPadding" format="dimension" />
+    </declare-styleable>
+    
+    <declare-styleable name="OppoPreferenceTextAppearance">
+        <attr name="titleColor" format="reference|color" />
+        <attr name="summaryColor" format="reference|color" />
+    </declare-styleable>
+    
 </resources>
